--- a/staticfiles/css/base.css
+++ b/staticfiles/css/base.css
@@ -12,6 +12,12 @@ body {
     flex-direction: column; /* Stack children vertically */
 }
 
+.bg-dark-75 {
+    background-color: rgba(0, 0, 0, 0.25);
+    width: 300px;
+    padding: 0 10px;
+}
+
 /* from Bulma */
 .icon {
     align-items: center;
@@ -19,6 +25,17 @@ body {
     justify-content: center;
     height: 1.5rem;
     width: 1.5rem;
+}
+
+.visually-hidden {
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    margin: -1px;
+    padding: 0;
+    overflow: hidden;
+    clip: rect(0, 0, 0, 0);
+    border: 0;
 }
 
 .logo-font {
@@ -132,6 +149,11 @@ a.category-badge > span.badge:hover {
 .update-link,
 .remove-item {
     cursor: pointer;
+}
+
+.footer-header {
+    font-size: 100%;
+    font-weight: bolder;
 }
 
 /* 404 Page Specific Styles */
